k8s/product-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
